Got rid of glide since it was causing illegal state errors cos of incomplete dependency integration used image holders instead,although still the recycler view doesn't appear in my nested scroll view im trying to fix that

--- a/app/src/main/res/layout/carousel_item_layout.xml
+++ b/app/src/main/res/layout/carousel_item_layout.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
 
     <!-- Carousel -->
     <com.google.android.material.carousel.MaskableFrameLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:context=".ui.home.HomeFragment"
         android:id="@+id/carousel_item_container"
         android:layout_width="match_parent"
         android:layout_height="150dp"
@@ -47,5 +46,3 @@
             android:contentDescription="borwors"
             android:scaleType="centerCrop"/>
     </com.google.android.material.carousel.MaskableFrameLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
