--- a/app/src/main/res/layout/carousel_item_layout.xml
+++ b/app/src/main/res/layout/carousel_item_layout.xml
@@ -5,7 +5,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        tools:context=".ui.home.HomeFragment"
+        tools:context=".ui.menu.MenuFragment"
         android:id="@+id/carousel_item_container"
         android:layout_width="match_parent"
         android:layout_height="300dp"
