--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -44,16 +44,12 @@
             android:orientation="vertical">
 
             <!-- Media -->
-
-
             <ImageView
+                android:id="@+id/checkout_meal_image"
                 android:layout_width="match_parent"
                 android:layout_height="194dp"
                 android:contentDescription="@string/Monday_meal"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/chickenchoma" />
-
-
+                android:scaleType="centerCrop" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -68,10 +64,13 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <TextView
+                        android:id="@+id/checkout_meal_chosen"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/meal_chosen"
-                        android:textAppearance="?attr/textAppearanceTitleMedium"/>
+                        android:layout_marginTop="8dp"
+                        android:textStyle="bold"
+                        android:textAppearance="?attr/textAppearanceBodyMedium"
+                        android:textColor="?android:attr/textColorSecondary"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -79,6 +78,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <TextView
+                        android:id="@+id/checkout_subtotal_fee_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
@@ -86,6 +86,14 @@
                         android:textStyle="bold"
                         android:textAppearance="?attr/textAppearanceBodyMedium"
                         android:textColor="?android:attr/textColorSecondary" />
+                    <TextView
+                        android:id="@+id/checkout_subtotal_fee"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:textStyle="bold"
+                        android:textAppearance="?attr/textAppearanceBodyMedium"
+                        android:textColor="?android:attr/textColorSecondary"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -116,10 +124,19 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <TextView
+                        android:id="@+id/checkout_total_fee_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:text="@string/total_price"
+                        android:textStyle="bold"
+                        android:textAppearance="?attr/textAppearanceBodyMedium"
+                        android:textColor="?android:attr/textColorSecondary"/>
+                    <TextView
+                        android:id="@+id/checkout_total_fee"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
                         android:textStyle="bold"
                         android:textAppearance="?attr/textAppearanceBodyMedium"
                         android:textColor="?android:attr/textColorSecondary"/>
@@ -161,7 +178,6 @@
                     android:layout_height="wrap_content"
                     android:text="@string/reduce_quantity" />
                 <TextView
-
                     android:layout_width="20dp"
                     android:layout_height="wrap_content"
                     style="@style/TextAppearance.Material3.BodyLarge"
@@ -178,8 +194,6 @@
         </LinearLayout>
 
     </com.google.android.material.card.MaterialCardView>
-
-
 
 </LinearLayout>
 </androidx.core.widget.NestedScrollView>
