Registration ad login authentication by firebase also storage of user data to be used in the app for user preference

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -230,7 +230,7 @@
         tools:ignore="LabelFor" />
 
     <Button
-        android:id="@+id/redeemButton"
+        android:id="@+id/registerButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="36dp"
