wrong filed types in registration

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -51,7 +51,7 @@
         android:layout_marginVertical="10dp"
         android:autofillHints=""
         android:backgroundTint="@color/lightBlue"
-        android:inputType="number"
+        android:inputType="textPersonName"
         android:minHeight="48dp"
         android:textColorHint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -78,7 +78,7 @@
         android:layout_marginVertical="10dp"
         android:autofillHints=""
         android:backgroundTint="@color/lightBlue"
-        android:inputType="number"
+        android:inputType="textPersonName"
         android:minHeight="48dp"
         android:textColorHint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
